Embed pdf has horiz scrollbar on default 3 column layout (bug 1237137)
Seen as the 3 column layout is the default one the embed pdf view
should fit within it.

Currently if you have a browser windo open fully, a 3 column layout,
and a pdf embedded you get a horizontal scrollbar on the embed pdf.

A slight adjustment of the min-width and it goes away.

The scrollbar will be there for 4 or 5 column widths but that is ok as
they are quite thin columns.

--- a/htdocs/artefact/file/blocktype/pdf/js/pdfjs/web/viewer.css
+++ b/htdocs/artefact/file/blocktype/pdf/js/pdfjs/web/viewer.css
@@ -416,7 +416,7 @@ html[dir='rtl'] #outerContainer.sidebarOpen > #sidebarContainer {
   right: 0;
   bottom: 0;
   left: 0;
-  min-width: 320px;
+  min-width: 310px;
   -webkit-transition-duration: 200ms;
   -webkit-transition-timing-function: ease;
   transition-duration: 200ms;
